updated swagger documentation
- Created swagger router and moved swagger-related code from the index router to there
- Deleted '/' root router; now '/' route directs to API Docs
- Added swagger comments in Contacts controller
