# api-docs/swagger-output.json
@@ -11,36 +11,61 @@
     "http"
   ],
   "paths": {
-    "/contacts/{id}": {
+    "/api-docs": {
       "get": {
         "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/contacts/{id}": {
+      "get": {
+        "tags": [],
+        "summary": "Get a contact by ID.",
+        "description": "Retrieves one contact from the database that has the contact_id provided as a URL parameter.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "The ID for the contact to be retrieved.",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Contact successfully retrieved.",
+            "schema": {
+              "$ref": "#/definitions/ContactOutput"
+            }
           }
         }
       },
       "put": {
-        "description": "",
+        "tags": [],
+        "summary": "Update a contact.",
+        "description": "Update a contact and insert it into the database.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "The ID for the contact to be updated.",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
           }
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Contact successfully updated."
           },
           "500": {
             "description": "Internal Server Error"
@@ -48,18 +73,27 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [],
+        "summary": "Deletes a contact.",
+        "description": "Finds the contact with the ID provided in the URL and drops it from the database.",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "The ID for the contact to be deleted.",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "201": {
+            "description": "Contact successfully deleted."
           },
           "500": {
             "description": "Internal Server Error"
@@ -69,64 +103,65 @@
     },
     "/contacts/": {
       "get": {
-        "description": "",
+        "tags": [],
+        "summary": "Get all contacts.",
+        "description": "Returns an array of all contacts from the database.",
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Array of all contacts successfully retrieved.",
+            "schema": {
+              "$ref": "#/definitions/ContactArrayOutput"
+            }
           }
         }
       },
       "post": {
-        "description": "",
+        "tags": [],
+        "summary": "Create a contact.",
+        "description": "Create a contact and insert it into the database.",
         "parameters": [
           {
-            "name": "body",
+            "name": "contact",
             "in": "body",
+            "description": "The contact object to be inserted.",
+            "required": true,
             "schema": {
-              "type": "object",
-              "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "birthday": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/ContactInput"
             }
           }
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Contact created successfully.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "info": {
+                  "type": "string",
+                  "example": "CONTACT_CREATED"
+                },
+                "contactId": {
+                  "$ref": "#/definitions/id"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
-    },
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
     }
   },
   "definitions": {
-    "Contact": {
+    "id": {
+      "type": "string",
+      "example": "650f46b8270b40a1fb152952"
+    },
+    "ContactInput": {
       "type": "object",
       "properties": {
         "firstName": {
@@ -149,6 +184,41 @@
           "type": "string",
           "example": "1997-04-11T00:00:00.000Z"
         }
+      }
+    },
+    "ContactOutput": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "example": "650f46b8270b40a1fb152952"
+        },
+        "firstName": {
+          "type": "string",
+          "example": "Caleb"
+        },
+        "lastName": {
+          "type": "string",
+          "example": "Willden"
+        },
+        "email": {
+          "type": "string",
+          "example": "wil17001@byui.edu"
+        },
+        "favoriteColor": {
+          "type": "string",
+          "example": "blue"
+        },
+        "birthday": {
+          "type": "string",
+          "example": "1997-04-11T00:00:00.000Z"
+        }
+      }
+    },
+    "ContactArrayOutput": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/ContactInput"
       }
     }
   }
